--- a/util/Makefile
+++ b/util/Makefile
@@ -1,18 +1,11 @@
 HOME = /home/guddu/Thermal_Aware_Placement
 SRC = $(shell pwd)
 CXX = g++
-CXXFLAGS = -std=c++11 -Wall -g -lpthread -ggdb3 
+CXXFLAGS = -std=c++11 -Wall -g -lpthread -ggdb3 -pg 
 FLAGS = $(TOPFLAGS)
 
-#//## For Essentials
 INCLUDE = util MemManager ParallelHashmap			# Required for header files
-LINKDIR = MemManager util							# Required for .a or .so files
-#//## For Essentials
-
-#//## For Parser
-INCLUDE += rtlcore/parser
-LINKDIR += rtlcore/parser
-#//## For Parser
+LINKDIR = MemManager								# Required for .a or .so files
 
 #LIB_TYPE = {static,shared}
 LIB_TYPE = $(LIB)
@@ -34,10 +27,9 @@ ifeq ($(shell uname | head -c 6),CYGWIN)
 endif
 
 
-TARGET := rtlcore-$(OS)
+TARGET := Util-$(OS).$(LIB_EXT)
 
-CLEANLIST =  $(OBJECTS) 
-
+CLEANLIST =  $(OBJECTS)
 
 default : target
 
@@ -47,15 +39,17 @@ default : target
 $(OBJECTS) : $(HEADERS) $(patsubst %,$(HOME)/%/*.h,$(INCLUDE)) 
 
 target: $(SOBJECTS) $(OBJECTS)
-	#creates executable
-	$(CXX) $(CXXFLAGS) -o $(TARGET) $(OBJECTS) $(patsubst %,$(HOME)/%/*-$(OS).$(LIB_EXT),$(LINKDIR)) $(FLAGS)
+	#creates library
+	ld -r -o $(TARGET) *.o
 
 .PHONY: build
 build: target clean
 
 .PHONY: clean
-clean:
-	rm -rf $(CLEANLIST)
+clean: $(CLEANLIST)
+	rm -rf $(OBJECTS)
 
 .PHONY: clean-all
-	rm -rf $(CLEANLIST) $(TARGET)
+	rm -rf $(OBJECTS) $(TARGET)
+
+
